# pytorch-10day

./: main.py  pyproject.toml
days/: 2.ipynb  2_tensor.ipynb  3.ipynb  3_deep.ipynb  4.ipynb  5.ipynb  5_mnist.ipynb  6.ipynb  CLAUDE.md
