[project]
name = "pytorch-10day"
version = "0.1.0"
description = "PyTorch 10-day learning project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch",
    "torchvision",
    "torchaudio",
    "numpy",
    "matplotlib",
    "jupyter",
    "pandas>=3.0.0",
    "seaborn>=0.13.2",
    "scikit-learn>=1.8.0",
    "torchsummary>=1.5.1",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }
torchaudio = { index = "pytorch-cu126" }

[dependency-groups]
dev = [
    "ruff>=0.15.2",
]
